--- a/app/src/app/topic-list.component.html
+++ b/app/src/app/topic-list.component.html
@@ -1,4 +1,4 @@
-<app-topic-detail [topic]="selectedTopic"></app-topic-detail>
+<app-topic-detail *ngIf="selectedTopic" [topic]="selectedTopic"></app-topic-detail>
 <ul class='topics'>
   <li *ngFor="let topic of topics" [class.selected]="topic === selectedTopic" (click)="onSelect(topic)">
       <span class="badge">{{topic.id}}</span>
