Add contest voting and automatic refresh

--- a/app/src/app/topic-detail.component.html
+++ b/app/src/app/topic-detail.component.html
@@ -1,18 +1,16 @@
 <div *ngIf="topic">
   <h2>{{topic.label}}</h2>
-  <div><label>id: </label>{{topic.id}}</div>
-
   <h3>Contest</h3>
   <ul *ngIf="contest">
-      <li *ngFor="let option of contest">
+      <li *ngFor="let option of contest"><a (click)="selectWinner(option)">
           <app-option-detail [option]="option"></app-option-detail>
-      </li>
+      </a></li>
   </ul>
 
   <h3>Option List</h3>
   <ul *ngIf="options">
     <li *ngFor="let option of options">
-      <app-option-detail [option]="option"></app-option-detail>
+        {{option.label}}
     </li>
   </ul>
 </div>
