Move topic detail to its own route

--- a/app/src/app/topic-list.component.html
+++ b/app/src/app/topic-list.component.html
@@ -1,7 +1,5 @@
-<app-topic-detail *ngIf="selectedTopic" [topic]="selectedTopic"></app-topic-detail>
 <ul class='topics'>
-  <li *ngFor="let topic of topics" [class.selected]="topic === selectedTopic" (click)="onSelect(topic)">
-      <span class="badge">{{topic.id}}</span>
-      {{topic.label}}
+  <li *ngFor="let topic of topics">
+      <a [routerLink]="['/topics', topic.id]">{{topic.label}}</a>
   </li>
 </ul>
