--- a/app/src/app/topic-detail.component.html
+++ b/app/src/app/topic-detail.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="topic">
   <h2>{{topic.label}}</h2>
   <h3>Contest</h3>
-  <ul *ngIf="contest">
-    <li *ngFor="let option of contest"><a (click)="selectWinner(option)">
-      <app-option-detail [option]="option"></app-option-detail>
-    </a></li>
+  <ul *ngIf="contest" class="contest">
+    <li *ngFor="let option of contest" (click)="selectWinner(option)">
+      {{option.label}}
+    </li>
   </ul>
 
   <h3>Top Options</h3>
