--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -1,5 +1,24 @@
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
+.contest {
+    border: 3px solid #444;
+    border-radius: 5px;
+    margin: 20px;
+    display: flex;
+    padding: 0px;
+}
+
+.contest li {
+    flex-grow: 1;
+    list-style: none;
+    text-align: center;
+    width: 100%;
+    padding: 30px 0px 30px 0px;
+}
+
+.contest li:first-child {
+    border: 10px #ccc;
+}
+
+.contest li:hover {
+    cursor: pointer;
+    background-color: #ccf;
 }
