--- a/app/src/app/topic-detail.component.html
+++ b/app/src/app/topic-detail.component.html
@@ -1,6 +1,19 @@
 <div *ngIf="topic">
   <h2>{{topic.label}}</h2>
   <input #name type="text" value="{{topic.label}}" (keyup.enter)="updateName(name.value)">
+  <button (click)="updateName(name.value)">Rename</button>
+
+  <div [hidden]="confirmingDelete">
+      <button (click)="confirmingDelete = true">Delete?</button>
+  </div>
+  <div [hidden]="!confirmingDelete">
+      <hr />
+      Are you sure?
+      <button (click)="delete()">Yes</button>
+      <button (click)="confirmingDelete = false">Cancel</button>
+      <hr />
+  </div>
+
   <h3>Contest</h3>
   <ul *ngIf="contest" class="contest">
     <li *ngFor="let option of contest" (click)="selectWinner(option)">
