--- a/app/src/app/topic-detail.component.html
+++ b/app/src/app/topic-detail.component.html
@@ -30,7 +30,7 @@
     </li>
   </ol>
 
-  <h3>Option List</h3>
+  <h3>Option List</h3> <a [routerLink]="['/topics', topic.id, 'options']">Edit</a>
   <ul *ngIf="options">
     <li *ngFor="let option of options">
       {{option.label}}
